kubernetes/base/network-policies/testing/cert-manager.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-cert-manager-core
  namespace: cert-manager
spec:
  selector: all()
  order: 100
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
  egress:
    - action: Allow
