kubernetes/base/network-policies/testing/kube-system.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-kube-system-core
  namespace: kube-system
spec:
  selector: all()
  order: 50
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
  egress:
    - action: Allow
